--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,7 @@
+{
+  "url": "https://<username>.github.io/tc-view-ext/index.html",
+  "title": "QR 3D Views (Assembly → View + CSV)",
+  "icon": "https://<username>.github.io/tc-view-ext/icon.png",
+  "infoUrl": "https://<username>.github.io/tc-view-ext/help.html"
+}
 
